--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ readme = "README.md"
 python = "^3.10"
 dramatiq = "^1.15.0"
 
+[tool.poetry.group.test.dependencies]
+pytest-cov = "^4.1.0"
+pytest = "^7.4.4"
 
 [build-system]
 requires = ["poetry-core"]
